# Proposal

./: README.md  pyproject.toml  train_ppo.py
minigrid_mdp/: __init__.py  runner.py
minigrid_mdp/agents/: __init__.py  base_agent.py  drl_placeholder.py  random_agent.py  rule_based_agent.py
minigrid_mdp/config/: system_params.yaml
minigrid_mdp/env/: __init__.py  minigrid_env.py
minigrid_mdp/logs/: baseline_results.json  drl_ppo_episodes.csv  drl_results.json  notebook_episode_logs.csv  random_episodes.csv  rule_based_episodes.csv
minigrid_mdp/notebooks/: 01_rule_based_episode.py
minigrid_mdp/tests/: test_env.py
